--- a/css/home/styles.css
+++ b/css/home/styles.css
@@ -919,7 +919,7 @@ p{
   flex-direction: column;
   gap: .95rem;
   align-items: center;
-  border: .2px solid rgb(255 255 255 / 68%);
+  border: .2px solid rgba(255, 255, 255, 68%);
   padding: 1rem .75px;
   border-top-right-radius: 1rem;
 }
@@ -1863,13 +1863,3 @@ footer .comment p{
   transform:translateY(100px);
   transition:transform 800ms cubic-bezier(0, 0.45, 0.15, 1)
 }
-
-/* #particles-js {
-  width: 100%;
-  height: 100%;
-  background: #0d0d0d;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -1;
-} */
